--- a/.github/workflows/main_angulr.yml
+++ b/.github/workflows/main_angulr.yml
@@ -23,10 +23,10 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-      
+          npm run install
+		      ng serve
+
+          
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
