--- a/.github/workflows/main_angulr.yml
+++ b/.github/workflows/main_angulr.yml
@@ -22,9 +22,9 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
-        run: |
+        run:
           npm run install
-		      ng serve
+	  ng serve
 
           
       - name: Upload artifact for deployment job
